# kanako-tasks

./: README.md  pyproject.toml
kanako_tasks/: __main__.py  actions.py  dmenu.py  formatting.py  notification.py  parcing.py  settings.py  timew.py
