[tool.poetry]
name = "kanako-tasks"
version = "v2"
description = "pomodoro timer"
authors = ["Niko Honu <nikohonu@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "kanako_tasks"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
rich = "^13.3.2"
appdirs = "^1.4.4"

[tool.poetry.scripts]
kanako = "kanako_tasks.__main__:main"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
neovim = "^0.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
